# advent-of-code

./: Cargo.toml  README.md  benchmarks.txt  day-1.bench.txt  day-2.bench.txt  day-3.bench.txt
2023/: Cargo.toml  benchmarks.txt  day-4.bench.txt  justfile
2023/day-1/: cargo.toml
2023/day-1/benches/: benchmarks-criterion.rs  benchmarks.rs
2023/day-1/src/: lib.rs  part1.rs  part1_nom.rs  part2.rs
2023/day-2/: puzzle.md
2023/day-2/benches/: benchmarks-criterion.rs
2023/day-2/src/: part2_nom.rs  part2_struct.rs
2023/day-3/: cargo.toml
2023/day-3/benches/: benchmarks-criterion.rs  benchmarks.rs
2023/day-3/src/: part2.rs  part2_nom.rs
2023/day-4/: cargo.toml
2023/day-5/src/: part1.rs  part2.rs
2024/: Cargo.toml  justfile
2024/daily-template/: cargo.toml
2024/daily-template/src/: part1.rs
2024/day-1/: cargo.toml
2024/day-1/benches/: benchmarks-criterion.rs  benchmarks.rs
2024/day-1/src/: part1_nom.rs  part2.rs
daily-template/: cargo.toml
day-1/src/: part1.rs  part2_nom.rs
day-2/: cargo.toml
day-2/benches/: benchmarks-criterion.rs  benchmarks.rs
day-2/src/: lib.rs  part1.rs  part1_nom.rs  part1_struct.rs  part2.rs
day-3/: cargo.toml  puzzle.md
day-3/src/: part1.rs  part2.rs
day-4/src/: part1.rs  part2.rs
day-5/: cargo.toml
