[workspace]
resolver = "2"

members = ["day-*"]
default-members = ["day-*"]

[workspace.dependencies]
indicatif = { version = "0.17.7", features = ["rayon"] }
itertools = "0.12.1"
miette = { version = "7.0.0", features = ["fancy"] }
nom = "7.1.3"
rayon = "1.8.1"
test-log = "0.2.14"
thiserror = "1.0.56"
tracing = "0.1.40"
clippy = "0.0.302"
criterion = { version = "0.5.1", features = ["html_reports"] }
plotters = "0.3.5"
divan = "0.1.11"
pretty_assertions = "1.4.0"
rstest = "0.18.2"
