[workspace]
resolver = "2"

members = ["day-*"]
default-members = ["day-*"]

[workspace.dependencies]
indicatif = { version = "0.17.7", features = ["rayon"] }
itertools = "0.13.0"
miette = { version = "7.2.0", features = ["fancy"] }
nom = "7.1.3"
nom_locate = "4.2.0"
rayon = "1.10.0"
test-log = "0.2.16"
thiserror = "1.0.64"
tracing = "0.1.40"
clippy = "0.0.302"
criterion = { version = "0.5.1", features = ["html_reports"] }
plotters = "0.3.7"
divan = "0.1.14"
pretty_assertions = "1.4.1"
rstest = "0.23.0"
